Fixed user nav section alignment

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -133,7 +133,7 @@ mark {
   display: inline-block;
   margin-right: 0.375rem;
   position: relative;
-  top: 1px;
+  top: 1x;
   font-weight: 500;
 }
 
